--- a/index.html
+++ b/index.html
@@ -33,7 +33,41 @@
             <p>Hi!<span class='wave'>👋</span> I'm David.</p>
             <p>I build interactive user interfaces.</span> </p>
         </div>
+        <div class="works-wrapper">
+            <div class="work-content-wrapper">
+                <div class="content-img-wrapper">
+                    <img src="img/project1.png" alt="project1">
+                </div>
+            </div>
+            <div class="work-content-wrapper">
+                <div class="content-img-wrapper">
+                    <img src="img/project2.png" alt="project2">
+                </div>
+            </div>
+            <div class="work-content-wrapper">
+                <div class="content-img-wrapper">
+                    <img src="img/project3.png" alt="project3">
+                </div>
+            </div>
+            <div class="work-content-wrapper">
+                <div class="content-img-wrapper">
+                    <img src="img/project4.png" alt="project4">
+                </div>
+            </div>
+            <div class="work-content-wrapper">
+                <div class="content-img-wrapper">
+                    <img src="img/project5.png" alt="project5">
+                </div>
+            </div>
+        </div>
+
     </main>
+    <!-- <div id="page1">
+        <img src="img/ref6.png" alt="sd">
+    </div>
+    <div id="page3">
+        <img src="img/ref5.png" alt="sd">
+    </div> -->
     <script src="js/index.js"></script>
 </body>
 
